--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,4 +38,5 @@ spring.flyway.locations=classpath:db/migration,classpath:db/testData
 # ===============================
 spring.jackson.deserialization.fail-on-unknown-properties=true
 spring.jackson.deserialization.fail-on-ignored-properties=true
+#spring.jackson.property-naming-strategy=SNAKE_CASE   //Altera de lowerCamelCase para snake_case
 
