--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>food deliver API</description>
 	<properties>
 		<java.version>11</java.version>
+		<modelmapper.version>2.4.2</modelmapper.version>
 	</properties>
 	<dependencies>
 	
@@ -65,6 +66,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+		
+		<dependency>
+		  <groupId>org.modelmapper</groupId>
+		  <artifactId>modelmapper</artifactId>
+		  <version>${modelmapper.version}</version>
+		</dependency>		
 
 		<dependency>
 			<groupId>org.postgresql</groupId>
