--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 	<properties>
 		<java.version>11</java.version>
 		<modelmapper.version>2.4.2</modelmapper.version>
+		<squiggly.version>1.3.18</squiggly.version>
 	</properties>
 	<dependencies>
 	
@@ -43,6 +44,12 @@
 		<dependency>
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-core</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.github.bohnman</groupId>
+			<artifactId>squiggly-filter-jackson</artifactId>
+			<version>${squiggly.version}</version>
 		</dependency>
 		
 		<dependency>
