--- a/pom.xml
+++ b/pom.xml
@@ -17,12 +17,25 @@
 		<java.version>11</java.version>
 		<modelmapper.version>2.4.2</modelmapper.version>
 		<squiggly.version>1.3.18</squiggly.version>
+		<jasperreports.version>6.17.0</jasperreports.version>
 	</properties>
 	<dependencies>
 	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports</artifactId>
+			<version>${jasperreports.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports-functions</artifactId>
+			<version>${jasperreports.version}</version>
 		</dependency>
 		
 		<dependency>
