--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,7 @@ spring.jpa.show-sql=true
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=src/main/resources/ddl.sql
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.metadata_builder_contributor=com.isfood.core.utils.SqlFunctionsMetadataBuilderContributor
 # ===============================
 # = JPA / POOL CONECTIONS HIKARI
 # ===============================
