--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@
 #spring.devtools.restart.additional-paths=.
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
 # ===============================
 # = DATA SOURCE
 # ===============================
