implemented upload, restore and delete photo product and exceptions

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 # ===============================
+# = PROJECT
+# ===============================
+isfood.storage.local.path-photo:/home/danilo/Documents/fotos/
+# ===============================
 # = SPRING
 # ===============================
 #spring.devtools.restart.additional-paths=.
